# Monchell-and-Cindy

./: .gitignore  CMakeLists.txt  README.md  git笔记.md  设计模式.md
Inc/: shape.h
Src/: main.cpp  shape.cpp
note/: TOEFL-writing.md  c++后半篇自学.md  cmake笔记.md  git笔记.md  vscode的使用.md  学做饭.md  设计模式.md
point/Inc/: mypoint.h
point/Src/: mypoint.cpp  mypoint_text.cpp
shape/Inc/: shape.h
shape/Src/: shape.cpp
